chore: add final modifier where possible